--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8081
+# ????? ????
+spring.devtools.restart.enabled=true
+
+# classpath ?? ?? ??(????)
+# poll-interval ?? ?? quiet-period ?? ????.
+spring.devtools.restart.poll-interval=2s
+spring.devtools.restart.quiet-period=1s
