--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.devtools.restart.enabled=true
 # poll-interval ?? ?? quiet-period ?? ????.
 spring.devtools.restart.poll-interval=2s
 spring.devtools.restart.quiet-period=1s
+
+##databse connection
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.driver-class-name=org.h2.Driver
