--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# JPA ? SQL?? ? ? ??
+spring.jpa.show-sql=true
+# JPA ??? ?? DB? ???? ???? ?? create / none
+spring.jpa.hibernate.ddl-auto=none
